# concu_news

./: .gitignore  CMakeLists.txt  README.md  help
src/: main.cpp
src/client/: ClientProcess.cpp  ClientProcess.h  main.cpp
src/cons/: Constants.h  Definition.h  Path.h
src/ipc/handler/: SIGTERM_SIGINT_QUIT_Handler.h  SignalHandler.cpp  SignalHandler.h
src/ipc/queue/: Queue.h
src/ipc/queue/exception/: QueueCreationException.cpp  QueueCreationException.h  QueueDestroyException.cpp  QueueDestroyException.h  QueueSndRcvException.cpp  QueueSndRcvException.h
src/ipc/socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h
src/ipc/socket/exception/: SocketConnectException.cpp  SocketConnectException.h  SocketCreationException.cpp  SocketCreationException.h
src/server/: ServerProcess.cpp  ServerProcess.h  main.cpp
src/server/service/: Service.cpp  Service.h  ServiceProcess.cpp  ServiceProcess.h
src/server/worker/: WorkerProcess.cpp  WorkerProcess.h
src/util/: FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  StringUtils.cpp  StringUtils.h
